ingress setup/ingress/food-clusterIP.yaml
apiVersion: v1
kind: Service
metadata: 
  name: wear-food
  namespace: app-space
spec: 
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector: 
    app: webapp-food
  type: ClusterIP
